es-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-deploy
  namespace: logging
  labels:
    service: es-deploy
spec:
  replicas: 2
  selector: 
    matchLabels:
      service: es-deploy
  template:
    metadata:
      labels:
        service: es-deploy
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: service
                operator: In
                values:
                - es-deploy
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: es
        image: docker.elastic.co/elasticsearch/elasticsearch:6.7.2
        readinessProbe:
          tcpSocket:
            port: 9200
          initialDelaySeconds: 20
          periodSeconds: 30
        ports:
        - containerPort: 9200
        - containerPort: 9300
---
apiVersion: v1
kind: Service
metadata:
  name: es6
  namespace: logging
spec:
  type: NodePort
  selector:
    service: es-deploy
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
    nodePort: 30011
  - name: "9300"
    port: 9300
    targetPort: 9300
    nodePort: 30012
