graylog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog-deploy
  namespace: logging
  labels:
    service: graylog-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      service: graylog-deploy
  template:
    metadata:
      labels:
        service: graylog-deploy
    spec:
      containers:
      - name: graylog3
        image: graylog/graylog:3.0
        ports:
        - containerPort: 9000
        - containerPort: 12201

---
apiVersion: v1
kind: Service
metadata:
  name: graylog3
  namespace: logging
spec:
  type: NodePort
  selector:
    service: graylog-deploy
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
    nodePort: 30013
  - name: "12201"
    port: 12201
    targetPort: 12201
    nodePort: 30014
