ingress-graylog.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graylog-ingress
  namespace: logging
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dc-wandi.graylog.com
    http:
      paths:
      - path: /
        backend:
          serviceName: graylog3
          servicePort: 9000
